stop image from wrapping

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 
 .backgroundImage { 
   background: url(Resources/background.jpg);
+  background-size:cover;
 }
 
 header {
